--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vercel-build": "prisma generate && prisma migrate deploy && prisma db seed && nest build"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
